        - The version of D3js has been upgraded to "7.8.5".

    Non breaking changes :
    ----------------------
        # Deprecations :
            - In the class 'creme_core.gui.mass_import.FormRegistry' :
                - The methods 'get()' & 'is_registered()' are now deprecated.
                - The class 'UnregisteredCTypeException' is now deprecated.
            - The templatetag {% has_perm_to %} is deprecated;
              use the template-filters of the new library "creme_perms" instead.
            - In 'creme_core.tests' :
                - The module 'forms.base' is deprecated.
                  Use these new methods of 'CremeTestCase' instead: assertFormfieldError() & assertValidationError().
                  Then stop using the base class 'FieldTestCase' & 'FieldTestCaseMixin'.
                - The class 'views.ViewsTestCase' is deprecated ;
                  use the new method 'CremeTestCase.add_credentials()' instead.
            - Apps :
                * Persons :
                    - The form class 'forms.contact.ContactNamesForm' is now deprecated.
                    - The class-view 'views.contact.ContactNamesEdition' is now deprecated.
        # A new setting value "POPULATORS" has been added ; it allows to
          override the classes used by the command "creme_populate".
          Many classes 'Populate' have been reworked to facilitate their modification by inheritance ;
          the work has been split into several methods, and class attributes with declarative values have been added.
        # In 'creme_core.views' :
            - The views which manage Bricks now display a minimal Brick (see 'creme_core.gui.bricks.ForbiddenBrick')
              which contains an error message when the attribute 'Brick.permissions' does not pass the validation.
              This attribute has been set for many Brick classes in order to use this new behaviour.